tests/lean/record_rec_protected.lean.expected.out
record_rec_protected.lean:8:6: error: unknown identifier 'rec'
